--- a/others/数据结构与算法.md
+++ b/others/数据结构与算法.md
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="custom.css">
+
 # 数据结构与算法
 
 ## 算法效率评价
@@ -27,7 +29,7 @@
 
    该求和函数的流程框图如下：
 
-   <img src="C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231111095832132.png" alt="image-20231111095832132" style="zoom: 67%;" />
+   <img src="img\image-20231111095832132.png" alt="image-20231111095832132" style="zoom: 67%;" />
 
 ​		该操作数量与输入数据大小n成正比，或者成线性关系。实际上时间复杂度描述的就是这个线性关系。
 
@@ -61,7 +63,7 @@
    	return res
    ```
 
-   ![image-20231111101421044](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231111101421044.png)
+   ![image-20231111101421044](img\image-20231111101421044.png)
 
 ​	在这种情况下，函数的操作数量与$n^2$成正比，或者说算法运行的时间和输入数据大小n成"平方关系"。
 
@@ -86,7 +88,7 @@ def recur(n: int) -> int:
 	return n + recur(n-1)
 ```
 
-![image-20231111103555432](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231111103555432.png)
+![image-20231111103555432](img\image-20231111103555432.png)
 
 
 
@@ -124,7 +126,7 @@ def tail_recur(n, res):
 
 - **尾递归**：求和操作是在“递”的过程中执行的，“归”的过程只需层层返回。
 
-  ![image-20231111104741650](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231111104741650.png)
+  ![image-20231111104741650](img\image-20231111104741650.png)
 
 3.递归树
 
@@ -148,7 +150,7 @@ def fib(n: int) -> int:
 
 观察以上代码，我们在函数内递归调用了两个函数，**这意味着从一个调用产生了两个调用分支**。如图 所示，这样不断递归调用下去，最终将产生一个层数为n 的「递归树 recursion tree」。
 
-![image-20231111105842123](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231111105842123.png)
+![image-20231111105842123](img\image-20231111105842123.png)
 
 本质上看，递归体现“将问题分解为跟小子问题”的思维范式，这种分治策略是至关重要的
 
@@ -212,7 +214,7 @@ def algorithm_C(n: int):
 - 算法 `B` 中的打印操作需要循环 $n $次，算法运行时间随着$n$增大呈线性增长。此算法的时间复杂度被称为“线性阶”。
 - 算法 `C` 中的打印操作需要循环 1000000 次，虽然运行时间很长，但它与输入数据大小$n$无关。因此 `C` 的时间复杂度和 `A` 相同，仍为“常数阶”。
 
-![image-20231111133547008](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231111133547008.png)
+![image-20231111133547008](img\image-20231111133547008.png)
 
 相比于直接统计算法运行时间，时间复杂度分析有哪些特点呢？
 
@@ -240,7 +242,7 @@ def algorithm(n: int):
 $$
 若存在正实数c和实数 n_0 ，使得对于所有的 n>n_0 ，均有 T(n)≤c⋅f(n) ，则可认为 f(n) 给出了 T(n) 的一个渐近上界，记为 T(n)=O(f(n))
 $$
-![image-20231111135212963](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231111135212963.png)
+![image-20231111135212963](img\image-20231111135212963.png)
 
 **推算方法**
 
@@ -276,13 +278,13 @@ def algorithm(n: int):
 
 时间复杂度由多项式$T(n)$中的最高阶决定.这是因为在$n$趋于无穷大时,最高阶的项将发挥主导作用,其他项的影响都可以忽略.
 
-![image-20231111144859555](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231111144859555.png)
+![image-20231111144859555](img\image-20231111144859555.png)
 
 常见类型:
 
 ![image-20231111145317254](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231111145317254.png)
 
-![image-20231111145339849](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231111145339849.png)
+![image-20231111145339849](img\image-20231111145339849.png)
 
 1.常数阶$O(1)$
 
