--- a/others/2023_11_15周报.md
+++ b/others/2023_11_15周报.md
@@ -1,16 +1,125 @@
-# 周报
+# 周报(11.7~11.16)
 
 ## 1.阅读文章
 
-* 
+| 文章名称                                                     | PDF                                            | 代码                                            | 笔记                                                      |
+| ------------------------------------------------------------ | ---------------------------------------------- | ----------------------------------------------- | --------------------------------------------------------- |
+| AIM: Adapting Image Models for Efficient Video Action Recognition | [ICLR2023](http://arxiv.org/abs/2302.03024)    | [GitHub](https://adapt-image-models.github.io/) | [AIM](https://yangkunl.github.io/docs/#/md/AIM)           |
+| Temporal-Relational CrossTransformers for Few-Shot Action Recognition | [CVPR2021](http://arxiv.org/abs/2101.06184)    | [GitHub](https://github.com/tobyperrett/TRX)    | [TRX](https://yangkunl.github.io/docs/#/md/TRX)           |
+| VideoMAE: Masked Autoencoders are Data-Efficient Learners for Self-Supervised Video Pre-Training | [NeurIPS2022](http://arxiv.org/abs/2203.12602) | [Github](https://github.com/MCG-NJU/VideoMAE)   | [VideoMAE](https://yangkunl.github.io/docs/#/md/VideoMAE) |
 
-##  1.复现FR-main代码
+## 2.复现文章部分实验
 
-只做了NGB 60 的训练和测试
+* Learning Discriminative Representations for Skeleton Based Action Recognition（基于骨骼点的动作识别）
 
-best acc 为90.02%与文章中提到
+  - 获取NTU RGB+D 60数据集（60类样本， 共56880个样本）,按照README进行数据处理
 
-## 2.复现了TRX的代码(训练)
+  ```
+   cd ./data/ntu # or cd ./data/ntu120
+   # Get skeleton of each performer
+   python get_raw_skes_data.py
+   # Remove the bad skeleton 
+   python get_raw_denoised_data.py
+   # Transform the skeleton to the center of the first frame
+   python seq_transformation.py
+  ```
 
-打算以该模型做毕设的部署.
+  - 训练模型
 
+    使用其提供的超参数进行训练，共训练65轮，在测试集的最好精度如下：
+
+    ```yaml
+    work_dir: ./work_dir/ntu60/xview/ctrgcn_joint_motion
+    # model
+    model: model.ctrgcn.Model
+    model_args:
+      num_class: 120
+      num_point: 25
+      num_person: 2
+      graph: graph.ntu_rgb_d.Graph
+      graph_args:
+        labeling_mode: 'spatial'
+    
+    #optim
+    weight_decay: 0.0004
+    base_lr: 0.1
+    lr_decay_rate: 0.1
+    step: [35, 55]
+    warm_up_epoch: 5
+    
+    # training
+    device: [0]
+    batch_size: 64
+    test_batch_size: 64
+    num_epoch: 65
+    nesterov: True
+    
+    ```
+
+    最好的精度：
+
+    ![image-20231116210639681](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231116210639681.png)
+
+与论文中的$92.8$有一定两个点的差距，不过我没调参只训练了一次，且其开源了最好模型
+
+* Temporal-Relational CrossTransformers for Few-Shot Action Recognition（TRX）
+
+  * 处理数据，开源的代码中没有处理数据的部分，且其训练代码中的数据是已经被抽好帧的数据，因此我自己写了处理数据的部分，将K-100数据集转化为其训练代码需要的格式.
+
+    原数据文件结构：
+
+    ```yaml
+    --kinetics
+    	--train
+    		--.mp4
+    		...
+    	--val
+    	--test
+    ```
+
+    转化后的文件结构：
+
+    ```
+    --kinetics
+    	--class_name1
+    		--.mp4
+    	--class_name2
+    		--.mp4
+    	...
+    ```
+
+    自己写了一个抽帧的python脚本，使用opencv。
+
+    ```
+    --kinetics
+    	--class_name1
+    		--ih1l6wb7LhU
+    			--01.jpg
+    			...
+    	--class_name2
+    	...
+    ```
+
+  - 改写其代码，使其适应我自己的代码框架
+
+  - 训练，按照其超参，共训练100000个task，在10000个task上做了测试，结果如下
+
+    ![image-20231116212554854](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231116212554854.png)
+
+##  3.学习
+
+* 模型部署
+
+  学习了PyTorch模型转换到ONNX模型的方法，将上述训练得到的TRX模型进行了转化，得到trx模型的onnx格式
+
+  ![image-20231116213020094](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231116213020094.png)
+
+​		在netron对该模型进行了可视化：
+
+​			![image-20231116213200988](C:\Users\19475\AppData\Roaming\Typora\typora-user-images\image-20231116213200988.png)
+
+​	使用OnnxRuntime，对生成的onnx模型进行了快速推理
+
+* JavaScript，html
+
+​		学习了js和html的基本语法，为毕设模型部署前端打下基础，在搭建[github](https://yangkunl.github.io/docs/)文档时使用到.
